@@ -1,3 +1,9 @@
+2003-05-15  Thomas Koeller  <thomas.koeller@baslerweb.com>
+
+	* include/hal_diag.h:
+	* src/at91_misc.c: Added function to generate a hardware reset
+	using the watchdog.
+	
 2003-05-15  Nick Garnett  <nickg@balti.calivar.com>
 
 	* src/at91_misc.c (hal_delay_us): Added calculation to better
